Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82276

Recreating models does not always work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.0 Beta2, 5.15
    • 5.15
    • Quick: 3D
    • None
    • f44e4a357b64cba2fe36af69305fe8bf4c6aa2d9 (qt/qtquick3d/5.15)
    • Qt Quick 3D - Week 9/10

      Recreating models may result in nothing being rendered. Easily reproducible with the benchmark demo app:

      • start the benchmark app (you may use --preset midrange if not highend desktop)
      • change the model to any other

      -> nothing gets rendered

      • change the model again to something else

      -> models get rendered

      It seems the sceneManager->dirtySpatialNodeList is not cleared every second time, as doing the steps above with 1 model results in 3 dirty items in the list when things get rendered and 7 when nothing is rendered.

        For Gerrit Dashboard: QTBUG-82276
        # Subject Branch Project Status CR V

            anmaatta Antti Määttä
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes